--- a/css/faq-style.css
+++ b/css/faq-style.css
@@ -68,6 +68,37 @@ button.bg-green:focus {
     color: #5ac832; 
 }
 
+
+.bg {
+    max-width: 100%;
+    min-height: 100%;
+}
+
+.bg img {
+    display: none;
+    max-width: 100%;
+    height: auto;
+}
+
+.bg img:nth-child(1) {
+    display: block;
+}
+
+.bg img:nth-child(2) {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .bg img:nth-child(1) {
+        display: none;
+    }
+    .bg img:nth-child(2) {
+        display: block;
+    }
+}
+
+
+
 .navbar .navbar-brand {
     position: relative;
 }
@@ -101,15 +132,14 @@ button.bg-green:focus {
 }
 
 .head {
-    max-width: 620px;
-    margin: 30px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
     .head {
-        margin: 0 auto;
-        margin-top: 50px;
-        margin-bottom: 30px;
+        padding-top: 30px;
+        padding-bottom: 30px; 
     }
 }
 
@@ -169,13 +199,13 @@ button.bg-green:focus {
 }
 
 #accordion .ans-content {
-    padding: 45px 30px;
+    padding: 15px 15px;
     background-color: #fff;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
     #accordion .ans-content {
-        padding: 30px 0px 30px 60px;
+        padding: 45px 0px;
     }
 }
 
@@ -189,6 +219,19 @@ button.bg-green:focus {
 #accordion .ans-content p {
     font-weight: 700;
     letter-spacing: 1px;
+}
+
+#accordion .ans-content a {
+    position: relative;
+}
+#accordion .ans-content a::after {
+    content: "";
+    position: absolute;
+    top: 25px;
+    left: 0px;
+    width: 100%;
+    height: 1px;
+    background-color: #5ac832;
 }
 
 .fb {
