--- a/css/faq-style.css
+++ b/css/faq-style.css
@@ -143,60 +143,100 @@ button.bg-green:focus {
     }
 }
 
+
+#accordion {
+  position: relative;
+  background-color: #fff;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
 #accordion .question {
     position: relative;
     width: 100%;
-    padding: 15px;
-    color: #fff;
-    font-size: 20px;
+    padding: 15px 30px;
     background-color: #5ac832;
+    color: #fff;
+    font-size: 16px;
+    text-align: left;
+    letter-spacing: 1px;
+    border-bottom: 1px solid #30bb64;
+    display: block;
+    border: 0;   
     cursor: pointer;
+    -webkit-transition: all 200ms ease-in;
+    -o-transition: all 200ms ease-in;
+    -moz-transition: all 200ms ease-in;
 }
 
+/* 左色塊 */
 #accordion .question::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255,255,255,0.5);
+    width: 10px;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
 }
-#accordion .question::after {
+
+/* 底線 
+#accordion button::after {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 2px;
-    background-color: rgba(0,0,0,0.1);
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.1);
+}*/
+
+/* 箭頭 */
+#accordion .question::after {
+    content: "";
+    position: absolute;
+    right: 20px;
+    top: calc(50% - 7px);
+    width: 15px;
+    height: 15px;
+    border-radius: 2px;
+    border-right: 4px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 4px solid rgba(255, 255, 255, 0.3);
+    transform: rotate(45deg);
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+#accordion .question:hover {
+    color: #fff;
+    background-color: #5ac832;
+}
+
+#accordion .question.collapsed {
+    color: #000;
+    background-color: #fff;
+}
+
+#accordion .question.collapsed::after {
+    border-right: 4px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 4px solid rgba(0, 0, 0, 0.1);
+    -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 #accordion .question .title {
-    font-size: 16px;
-    letter-spacing: 1px;
-    margin-left: 15px;
-    margin-right: 25px;
+    width: 100%;
 }
-
-#accordion .question .title::before {
+#accordion .question .title::after {
     content: "";
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
-    width: 15px;
-    height: 100%;
-    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
-#accordion .question .arrow-btn {
-    position: absolute;
-    right: 0;
-    top: calc(50% - 25px);
-    padding: 15px;
-    font-size: 24px;
-    color: rgba(255,255,255,0.5);
-}
 
 #accordion .ans-content {
     padding: 15px 30px;
@@ -245,17 +285,36 @@ button.bg-green:focus {
 }
 
 
-.top {
-    font-size: 50px;
-    color: rgba(0, 0, 0, 0.2)!important;
-    position: fixed; 
-    bottom: 20px; 
-    right: 20px; 
-    z-index: 99; 
-    overflow: inherit;
+.toTop-arrow {
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    border-radius: 0;
+    opacity: 0.6;
+    background: rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    position:fixed;
+    right: 1rem;
+    bottom: 1rem;
+    display: none;
 }
-
-.top:hover {
-    color: rgba(0, 0, 0, 0.3)!important;
-
+.toTop-arrow::before, .toTop-arrow::after {
+    width: 18px;
+    height: 5px;
+    border-radius: 3px;
+    background: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    content: "";
 }
+.toTop-arrow::before {
+    transform: rotate(-45deg) translate(0, -50%);
+    left: 0.5rem;
+}
+.toTop-arrow::after {
+    transform: rotate(45deg) translate(0, -50%);
+    right: 0.5rem;
+}
+.toTop-arrow:focus {outline: none;}
+
