--- a/css/faq-style.css
+++ b/css/faq-style.css
@@ -297,6 +297,7 @@ button.bg-green:focus {
     background: rgba(255, 255, 255, 0.8);
     position: absolute;
     content: "";
+    bottom: 15px;
 }
 .toTop-arrow::before {
     transform: rotate(-45deg) translate(0, -50%);
